add test-releases-can-be-exported to syslog drain group
Signed-off-by: Tom Chen <tochen@pivotal.io>

--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -58,6 +58,7 @@ groups:
   - cf-syslog-drain-promotion
   - cf-drain-cli-tests
   - cf-drain-cli-promotion
+  - test-releases-can-be-exported
 
 - name: log-stream-cli
   jobs:
