--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -13,7 +13,6 @@ groups:
   - service-metrics-master-promotion
 
   - statsd-injector-tests
-  - statsd-injector-bump-submodule
   - statsd-injector-promotion
   - statsd-injector-master-promotion
 
@@ -42,83 +41,94 @@ groups:
 
   - service-logs-unit-tests
   - service-logs-deploy
-  - service-logs-test
+  - service-logs-smoke-test
   - service-logs-promotion
   - service-logs-master-promotion
   - test-releases-can-be-exported
 
 - name: cf-syslog-drain
   jobs:
+  - cf-syslog-drain-tests
+  - cf-syslog-drain-bump-submodule
+  - cf-drain-cli-tests
+  - cf-deploy
   - cats
   - cfar-lats
-  - cf-deploy
-  - cf-syslog-drain-bump-submodule
-  - cf-syslog-drain-tests
-  - cf-syslog-drain-master-promotion
-  - cf-syslog-drain-promotion
-  - cf-drain-cli-tests
-  - cf-drain-cli-promotion
   - test-releases-can-be-exported
+  - cf-syslog-drain-promotion
+  - cf-syslog-drain-master-promotion
+  - cf-drain-cli-promotion
 
 - name: log-stream-cli
   jobs:
-  - cfar-lats
   - log-stream-cli-tests
+  - cfar-lats
   - log-stream-cli-promotion
 
 - name: loggregator
   jobs:
-  - cf-deploy
-  - loggregator-agent-master-promotion
-  - loggregator-agent-tests
-  - loggregator-agent-bump-submodule
+  - loggregator-tests
   - loggregator-bump-submodule
-  - loggregator-master-promotion
-  - loggregator-agent-promotion
+  - cf-deploy
   - cfar-lats
   - cats
-  - loggregator-tests
-  - loggregator-promotion
   - test-releases-can-be-exported
+  - loggregator-promotion
+  - loggregator-master-promotion
+
+- name: agent
+  jobs:
+  - loggregator-agent-tests
+  - loggregator-agent-bump-submodule
+  - cf-deploy
+  - cfar-lats
+  - cats
+  - test-releases-can-be-exported
+  - loggregator-agent-promotion
+  - loggregator-agent-master-promotion
 
 - name: statsd-injector
   jobs:
   - statsd-injector-tests
-  - statsd-injector-bump-submodule
+  - cf-deploy
+  - cats
+  - cfar-lats
+  - test-releases-can-be-exported
   - statsd-injector-promotion
   - statsd-injector-master-promotion
-  - test-releases-can-be-exported
 
 - name: noisy-neighbor
   jobs:
   - noisy-neighbor-nozzle-tests
   - noisy-neighbor-nozzle-deploy
-  - test-releases-can-be-exported
 
 - name: service-metrics
   jobs:
   - service-metrics-tests
   - service-metrics-deploy
   - service-metrics-smoke-tests
+  - test-releases-can-be-exported
   - service-metrics-promotion
   - service-metrics-master-promotion
-  - test-releases-can-be-exported
 
 - name: leadership-election
   jobs:
   - leadership-election-tests
+  - cf-deploy
+  - cfar-lats
+  - cats
+  - test-releases-can-be-exported
   - leadership-election-promotion
   - leadership-election-master-promotion
-  - test-releases-can-be-exported
 
 - name: service-logs
   jobs:
   - service-logs-unit-tests
   - service-logs-deploy
-  - service-logs-test
+  - service-logs-smoke-test
+  - test-releases-can-be-exported
   - service-logs-promotion
   - service-logs-master-promotion
-  - test-releases-can-be-exported
 
 resources:
 - name: 5m
@@ -354,12 +364,6 @@ resources:
     ignore_paths:
     - .final_builds
     - releases
-
-- name: statsd-injector
-  type: git
-  source:
-    uri: git@github.com:cloudfoundry/statsd-injector
-    private_key: {{cf-loggregator-oauth-bot-key}}
 
 - name: statsd-injector-release
   type: git
@@ -1101,79 +1105,26 @@ jobs:
   plan:
   - aggregate:
     - get: loggregator-ci
-    - get: statsd-injector
+    - get: 24h
       trigger: true
-  - task: run-tests
-    file: loggregator-ci/tasks/go-test-with-latest-packages/task.yml
-    input_mapping:
-      source-repo: statsd-injector
-    params:
-      IMPORT_PATH: github.com/cloudfoundry/statsd-injector
-
-- name: statsd-injector-bump-submodule
-  serial: true
-  plan:
-  - aggregate:
-    - get: loggregator-ci
     - get: statsd-injector-release
       trigger: true
-    - get: statsd-injector
-      passed: ["statsd-injector-tests"]
-      trigger: true
-  - task: update-submodule
-    file: loggregator-ci/tasks/bump-submodule/task.yml
-    input_mapping:
-      release-repo: statsd-injector-release
-      source-repo: statsd-injector
-    output_mapping:
-      bumped-release-repo: bumped-statsd-injector-release
-    params:
-      SUBMODULE_PATH: src/github.com/cloudfoundry/statsd-injector
-  - task: sync-package-specs
-    file: loggregator-ci/tasks/run-release-script/task.yml
-    input_mapping:
-      release-repo: bumped-statsd-injector-release
-    output_mapping:
-      updated-release-repo: synced-statsd-injector-release
-    params:
-      SCRIPT: scripts/sync-package-specs
   - task: run-tests
-    config:
-      platform: linux
-      image_resource:
-        type: docker-image
-        source:
-          repository: loggregator/base
-      inputs:
-      - name: synced-statsd-injector-release
-      run:
-        path: bash
-        args:
-        - -c
-        - |
-          #!/bin/bash
-
-          set -ex
-
-          pushd synced-statsd-injector-release
-            export GOPATH="$PWD"
-            export PATH="$GOPATH/bin:$PATH"
-            go test -race github.com/cloudfoundry/statsd-injector/...
-          popd
-  - task: commit
-    file: loggregator-ci/tasks/commit-with-shortlog/task.yml
+    file: loggregator-ci/tasks/go-bump-modules-and-test/task.yml
     input_mapping:
-      release-repo: synced-statsd-injector-release
+      source-repo: statsd-injector-release
+  - task: commit
+    file: loggregator-ci/tasks/commit/task.yml
+    input_mapping:
+      release-repo: bumped-source
     output_mapping:
       committed-repo: committed-statsd-injector-release
     params:
-      PATHS: |
-        src/github.com/cloudfoundry/statsd-injector
-        packages
+      COMMIT_MESSAGE: "Bump modules"
   - put: statsd-injector-release
     params:
       repository: committed-statsd-injector-release
-      rebase: true
+      rebase: false
 
 - name: statsd-injector-promotion
   serial: true
@@ -1182,7 +1133,7 @@ jobs:
     - get: develop
       resource: statsd-injector-release
       trigger: true
-      passed: ["statsd-injector-bump-submodule", "test-releases-can-be-exported"]
+      passed: ["cats", "cfar-lats", "test-releases-can-be-exported"]
     - get: statsd-injector-release-release-elect
   - put: statsd-injector-release-release-elect
     params:
@@ -1250,7 +1201,7 @@ jobs:
     - get: develop
       resource: leadership-election-release
       trigger: true
-      passed: ["leadership-election-tests", "test-releases-can-be-exported"]
+      passed: ["cats", "cfar-lats", "test-releases-can-be-exported"]
     - get: leadership-election-release-release-elect
   - put: leadership-election-release-release-elect
     params:
@@ -1369,7 +1320,7 @@ jobs:
       OPS_FILES: |
         on-the-fly.yml
 
-- name: service-logs-test
+- name: service-logs-smoke-test
   serial: true
   plan:
   - aggregate:
@@ -1383,7 +1334,7 @@ jobs:
       resource: deployments-loggregator
     - get: loggregator-ci
   - task: test-service-logs
-    file: loggregator-ci/tasks/service-logs-test/task.yml
+    file: loggregator-ci/tasks/service-logs-smoke-test/task.yml
     params:
       BBL_STATE_DIR: ((acceptance_bbl_state_dir))
       CF_API: https://api.((acceptance_system_domain))
@@ -1397,7 +1348,7 @@ jobs:
   - aggregate:
     - get: develop
       resource: service-logs-release
-      passed: ["service-logs-test", "test-releases-can-be-exported"]
+      passed: ["service-logs-smoke-test", "test-releases-can-be-exported"]
       trigger: true
     - get: service-logs-release-release-elect
   - put: service-logs-release-release-elect
@@ -1446,6 +1397,7 @@ jobs:
       source-repo: noisy-neighbor-nozzle
     params:
       IMPORT_PATH: code.cloudfoundry.org/noisy-neighbor-nozzle
+
 - name: noisy-neighbor-nozzle-deploy
   serial: true
   plan:
@@ -1662,11 +1614,12 @@ jobs:
       trigger: true
     - get: cf-syslog-drain-release
       trigger: true
-      passed:
-      - cf-syslog-drain-bump-submodule
+      passed: [cf-syslog-drain-bump-submodule]
     - get: statsd-injector-release
+      passed: [statsd-injector-tests]
       trigger: true
     - get: leadership-election-release
+      passed: [leadership-election-tests]
       trigger: true
     - get: cf-drain-cli
       passed:
@@ -1906,13 +1859,19 @@ jobs:
     - get: deployments-loggregator
     - get: cf-acceptance-tests
     - get: loggregator-release
+      passed: [cf-deploy]
       trigger: true
-      passed: ["cf-deploy"]
     - get: loggregator-agent-release
+      passed: [cf-deploy]
       trigger: true
-      passed: ["cf-deploy"]
     - get: cf-syslog-drain-release
-      passed: ["cf-deploy"]
+      trigger: true
+      passed: [cf-deploy]
+    - get: statsd-injector-release
+      passed: [cf-deploy]
+      trigger: true
+    - get: leadership-election-release
+      passed: [cf-deploy]
       trigger: true
   - task: generate-config
     file: loggregator-ci/tasks/generate-cats-config/task.yml
@@ -1939,13 +1898,19 @@ jobs:
     - get: cfar-logging-acceptance-tests
       trigger: true
     - get: loggregator-release
+      passed: [cf-deploy]
       trigger: true
-      passed: ["cf-deploy"]
     - get: loggregator-agent-release
+      passed: [cf-deploy]
       trigger: true
-      passed: ["cf-deploy"]
     - get: cf-syslog-drain-release
-      passed: ["cf-deploy"]
+      trigger: true
+      passed: [cf-deploy]
+    - get: statsd-injector-release
+      passed: [cf-deploy]
+      trigger: true
+    - get: leadership-election-release
+      passed: [cf-deploy]
       trigger: true
     - get: cf-drain-cli
       passed: ["cf-deploy"]
