--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -25,7 +25,6 @@ groups:
   - loggregator-tests
   - loggregator-promotion
 
-  - cf-syslog-drain-bump-submodule
   - cf-syslog-drain-tests
   - cf-syslog-drain-master-promotion
   - cf-syslog-drain-promotion
@@ -49,7 +48,6 @@ groups:
 - name: cf-syslog-drain
   jobs:
   - cf-syslog-drain-tests
-  - cf-syslog-drain-bump-submodule
   - cf-drain-cli-tests
   - cf-deploy
   - cats
@@ -332,13 +330,6 @@ resources:
   type: git
   source:
     uri: https://github.com/cloudfoundry/noisy-neighbor-nozzle
-
-- name: scalable-syslog
-  type: git
-  source:
-    uri: git@github.com:cloudfoundry/scalable-syslog
-    private_key: ((cf-loggregator-oauth-bot-key))
-    branch: master
 
 - name: service-metrics-release
   type: git
@@ -934,14 +925,26 @@ jobs:
   plan:
   - aggregate:
     - get: loggregator-ci
-    - get: scalable-syslog
+    - get: 24h
+      trigger: true
+    - get: cf-syslog-drain-release
       trigger: true
   - task: run-tests
-    file: loggregator-ci/tasks/go-test-with-latest-packages/task.yml
+    file: loggregator-ci/tasks/go-bump-modules-and-test/task.yml
     input_mapping:
-      source-repo: scalable-syslog
+      source-repo: cf-syslog-drain-release
+  - task: commit
+    file: loggregator-ci/tasks/commit/task.yml
+    input_mapping:
+      release-repo: bumped-source
+    output_mapping:
+      committed-repo: committed-cf-syslog-drain-release
     params:
-      IMPORT_PATH: code.cloudfoundry.org/scalable-syslog
+      COMMIT_MESSAGE: "Bump modules"
+  - put: cf-syslog-drain-release
+    params:
+      repository: committed-cf-syslog-drain-release
+      rebase: false
 
 - name: cf-drain-cli-tests
   serial: true
@@ -957,82 +960,6 @@ jobs:
       source-repo: cf-drain-cli
     params:
       IMPORT_PATH: code.cloudfoundry.org/cf-drain-cli
-
-- name: cf-syslog-drain-bump-submodule
-  serial: true
-  plan:
-  - aggregate:
-    - get: loggregator-ci
-    - get: go-loggregator
-    - get: cf-syslog-drain-release
-      trigger: true
-    - get: scalable-syslog
-      passed: ["cf-syslog-drain-tests"]
-      trigger: true
-  - task: update-submodule
-    file: loggregator-ci/tasks/bump-submodule/task.yml
-    input_mapping:
-      release-repo: cf-syslog-drain-release
-      source-repo: scalable-syslog
-    output_mapping:
-      bumped-release-repo: updated-cf-syslog-drain-release
-    params:
-      SUBMODULE_PATH: src/code.cloudfoundry.org/scalable-syslog
-  - task: update-go-loggregator-submodule
-    file: loggregator-ci/tasks/bump-submodule/task.yml
-    input_mapping:
-      release-repo: updated-cf-syslog-drain-release
-      source-repo: go-loggregator
-    output_mapping:
-      bumped-release-repo: bumped-go-loggregator-release
-    params:
-      SUBMODULE_PATH: src/code.cloudfoundry.org/go-loggregator
-  - task: sync-package-specs
-    file: loggregator-ci/tasks/run-release-script/task.yml
-    input_mapping:
-      release-repo: bumped-go-loggregator-release
-    output_mapping:
-      updated-release-repo: synced-cf-syslog-drain-release
-    params:
-      SCRIPT: scripts/sync-package-specs
-  - task: run-tests
-    config:
-      platform: linux
-      image_resource:
-        type: docker-image
-        source:
-          repository: loggregator/base
-      inputs:
-      - name: synced-cf-syslog-drain-release
-      run:
-        path: bash
-        args:
-        - -c
-        - |
-          #!/bin/bash
-
-          set -ex
-
-          pushd synced-cf-syslog-drain-release
-            export GOPATH="$PWD"
-            export PATH="$GOPATH/bin:$PATH"
-            go test -race code.cloudfoundry.org/scalable-syslog/...
-          popd
-  - task: commit
-    file: loggregator-ci/tasks/commit-with-shortlog/task.yml
-    input_mapping:
-      release-repo: synced-cf-syslog-drain-release
-    output_mapping:
-      committed-repo: committed-cf-syslog-drain-release
-    params:
-      PATHS: |
-        src/code.cloudfoundry.org/scalable-syslog
-        src/code.cloudfoundry.org/go-loggregator
-        packages
-  - put: cf-syslog-drain-release
-    params:
-      repository: committed-cf-syslog-drain-release
-      rebase: true
 
 - name: cf-syslog-drain-promotion
   serial: true
@@ -1614,7 +1541,7 @@ jobs:
       trigger: true
     - get: cf-syslog-drain-release
       trigger: true
-      passed: [cf-syslog-drain-bump-submodule]
+      passed: [cf-syslog-drain-tests]
     - get: statsd-injector-release
       passed: [statsd-injector-tests]
       trigger: true
