--- a/pipelines/release.yml
+++ b/pipelines/release.yml
@@ -549,8 +549,8 @@ jobs:
   - task: create-final-release
     file: loggregator-ci/tasks/create-final-release/task.yml
     input_mapping:
-      master-repo: loggregator-develop
-      develop-repo: loggregator-master
+      master-repo: loggregator-master
+      develop-repo: loggregator-develop
     params:
       S3_ACCESS_KEY: {{loggregator-team-s3-access-key}}
       S3_SECRET_KEY: {{loggregator-team-s3-secret-key}}
@@ -608,7 +608,7 @@ jobs:
 
           # establish version/tag strings
           new_version="$MAJOR_VERSION"
-  "
+
           backport_branch="$BRANCH_NAME"
 
           # write out github release files
@@ -689,8 +689,8 @@ jobs:
   - task: create-final-release
     file: loggregator-ci/tasks/create-final-release/task.yml
     input_mapping:
-      master-repo: cf-syslog-drain-release-develop
-      develop-repo: cf-syslog-drain-release-master
+      master-repo: cf-syslog-drain-release-master
+      develop-repo: cf-syslog-drain-release-develop
     params:
       S3_ACCESS_KEY: {{s3-access-key-id}}
       S3_SECRET_KEY: {{s3-secret-access-key}}
@@ -750,7 +750,6 @@ jobs:
 
           # establish version/tag strings
           new_version="$MAJOR_VERSION"
-  "
           backport_branch="$BRANCH_NAME"
 
           # write out github release files
@@ -831,8 +830,8 @@ jobs:
   - task: create-final-release
     file: loggregator-ci/tasks/create-final-release/task.yml
     input_mapping:
-      master-repo: service-metrics-release-develop
-      develop-repo: service-metrics-release-master
+      master-repo: service-metrics-release-master
+      develop-repo: service-metrics-release-develop
     params:
       S3_ACCESS_KEY: {{loggregator-team-s3-access-key}}
       S3_SECRET_KEY: {{loggregator-team-s3-secret-key}}
@@ -868,8 +867,8 @@ jobs:
   - task: create-final-release
     file: loggregator-ci/tasks/create-final-release/task.yml
     input_mapping:
-      master-repo: statsd-injector-release-develop
-      develop-repo: statsd-injector-release-master
+      master-repo: statsd-injector-release-master
+      develop-repo: statsd-injector-release-develop
     params:
       S3_ACCESS_KEY: {{s3-access-key-id}}
       S3_SECRET_KEY: {{s3-secret-access-key}}
@@ -905,8 +904,8 @@ jobs:
   - task: create-final-release
     file: loggregator-ci/tasks/create-final-release/task.yml
     input_mapping:
-      master-repo: leadership-election-release-develop
-      develop-repo: leadership-election-release-master
+      master-repo: leadership-election-release-master
+      develop-repo: leadership-election-release-develop
     params:
       S3_ACCESS_KEY: {{s3-access-key-id}}
       S3_SECRET_KEY: {{s3-secret-access-key}}
@@ -1080,8 +1079,8 @@ jobs:
   - task: create-final-release
     file: loggregator-ci/tasks/create-final-release/task.yml
     input_mapping:
-      master-repo: loggregator-agent-release-develop
-      develop-repo: loggregator-agent-release-master
+      master-repo: loggregator-agent-release-master
+      develop-repo: loggregator-agent-release-develop
     params:
       S3_ACCESS_KEY: {{loggregator-team-s3-access-key}}
       S3_SECRET_KEY: {{loggregator-team-s3-secret-key}}
@@ -1118,8 +1117,8 @@ jobs:
   - task: create-final-release
     file: loggregator-ci/tasks/create-final-release/task.yml
     input_mapping:
-      master-repo: service-logs-release-develop
-      develop-repo: service-logs-release-master
+      master-repo: service-logs-release-master
+      develop-repo: service-logs-release-develop
     params:
       S3_ACCESS_KEY: {{loggregator-team-s3-access-key}}
       S3_SECRET_KEY: {{loggregator-team-s3-secret-key}}
