pull tasks out of release pipeline
Signed-off-by: Max Eshleman <meshleman@pivotal.io>

--- a/pipelines/go-packages.yml
+++ b/pipelines/go-packages.yml
@@ -1,7 +1,7 @@
 resources:
 - name: loggregator-develop
   type: git
-  source: &loggregator_develop
+  source:
     uri: git@github.com:cloudfoundry/loggregator-release.git
     branch: develop
     private_key: {{loggregator-key}}
