--- a/pipelines/release.yml
+++ b/pipelines/release.yml
@@ -581,92 +581,13 @@ jobs:
   plan:
   - get: loggregator-backport
   - task: create-backport
-    config:
-      image_resource:
-        type: docker-image
-        source:
-          repository: loggregator/base
-      platform: linux
-      params:
-        S3_ACCESS_KEY: {{loggregator-team-s3-access-key}}
-        S3_SECRET_KEY: {{loggregator-team-s3-secret-key}}
-        SSH_KEY: {{loggregator-key}}
-        MAJOR_VERSION: "1"
-        BRANCH_NAME: *backport-branch
-      inputs:
-      - name: loggregator-backport
-      outputs:
-      - name: github-release
-      - name: create-final-release
-      run:
-        path: bash
-        args:
-        - -c
-        - |
-          #!/bin/bash
-          set -ex
-
-          # establish version/tag strings
-          new_version="$MAJOR_VERSION"
-
-          backport_branch="$BRANCH_NAME"
-
-          # write out github release files
-          echo "Loggregator $new_version" > github-release/name
-          echo $tag_name > github-release/tag
-          echo "TBD" > github-release/body
-
-          # setup ssh for reading from github
-          eval "$(ssh-agent -s)"
-          mkdir -p ~/.ssh
-          echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
-          ssh-add <(echo "$SSH_KEY")
-
-          # build final release on backport branchd
-          pushd loggregator-backport
-            export GOPATH=$PWD
-            export PATH=$PATH:$GOPATH/bin
-            git checkout "$backport_branch"
-
-            # Ensure sync-package-specs has been run
-            ./scripts/sync-package-specs
-
-            # Running status here makes the following diff-index work as
-            # indended. TODO: Why?
-            git status
-
-            # Assert there is not diff
-            if ! git diff-index --quiet HEAD --; then
-              echo "Looks like sync-package-specs wasn't run"
-              exit 1
-            fi
-
-            # setup private.yml used by `create-release --final`
-            cat << EOF > config/private.yml
-          ---
-          blobstore:
-            provider: s3
-            options:
-              bucket_name: loggregator-release-blobs
-              access_key_id: $S3_ACCESS_KEY
-              secret_access_key: $S3_SECRET_KEY
-              credentials_source: static
-          EOF
-
-            # create final release and commit artifcats
-            bosh -n create-release --sha2 --final \
-              --tarball ../github-release/release.tgz \
-              --version $new_version
-            git add .
-            git commit -m "Create final release"
-
-            final_release_abbrev=$(git rev-parse --abbrev-ref HEAD)
-            final_release_sha=$(git rev-parse HEAD)
-            git tag "$tag_name" $final_release_sha
-          popd
-
-          # copy repos into output
-          cp -r loggregator-backport create-final-release
+    file: loggregator-ci/tasks/backport/loggregator/task.yml
+    params:
+      S3_ACCESS_KEY: {{loggregator-team-s3-access-key}}
+      S3_SECRET_KEY: {{loggregator-team-s3-secret-key}}
+      SSH_KEY: {{loggregator-key}}
+      MAJOR_VERSION: "1"
+      BRANCH_NAME: *backport-branch
   - put: loggregator-release-backport
     params:
       repository: create-final-release/loggregator-backport
@@ -722,92 +643,14 @@ jobs:
   - get: cf-syslog-drain-release-backport
     trigger: false
   - task: create-backport
-    config:
-      image_resource:
-        type: docker-image
-        source:
-          repository: loggregator/base
-      platform: linux
-      params:
-        S3_ACCESS_KEY: {{s3-access-key-id}}
-        S3_SECRET_KEY: {{s3-secret-access-key}}
-        SSH_KEY: {{loggregator-key}}
-        BLOBSTORE_BUCKET: cf-syslog-drain-release-blobs
-        MAJOR_VERSION: "7"
-        BRANCH_NAME: *cf-syslog-backport-branch
-      inputs:
-      - name: cf-syslog-drain-release-backport
-      outputs:
-      - name: github-release
-      - name: create-final-release
-      run:
-        path: bash
-        args:
-        - -c
-        - |
-          #!/bin/bash
-          set -ex
-
-          # establish version/tag strings
-          new_version="$MAJOR_VERSION"
-          backport_branch="$BRANCH_NAME"
-
-          # write out github release files
-          echo "CF Syslog Drain Release $new_version" > github-release/name
-          echo $tag_name > github-release/tag
-          echo "TBD" > github-release/body
-
-          # setup git for committing
-          git config --global user.email "cf-loggregator@pivotal.io"
-          git config --global user.name "Loggregator CI"
-
-          # setup ssh for reading from github
-          eval "$(ssh-agent -s)"
-          mkdir -p ~/.ssh
-          echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
-          ssh-add <(echo "$SSH_KEY")
-
-          # build final release on backport branchd
-          pushd cf-syslog-drain-release-backport
-            export GOPATH=$PWD
-            export PATH=$PATH:$GOPATH/bin
-            git checkout "$backport_branch"
-
-            # Ensure sync-package-specs has been run
-            ./scripts/sync-package-specs
-
-            # Assert there is not diff
-            if [ ! test $(git diff-index --quiet HEAD --) ]; then
-              echo "Looks like sync-package-specs wasn't ran"
-              exit 1
-            fi
-
-            # setup private.yml used by `create-release --final`
-            cat << EOF > config/private.yml
-          ---
-          blobstore:
-            provider: s3
-            options:
-              bucket_name: $BLOBSTORE_BUCKET
-              access_key_id: $S3_ACCESS_KEY
-              secret_access_key: $S3_SECRET_KEY
-              credentials_source: static
-          EOF
-
-            # create final release and commit artifcats
-            bosh -n create-release --sha2 --final \
-              --tarball ../github-release/release.tgz \
-              --version $new_version
-            git add .
-            git commit -m "Create final release"
-
-            final_release_abbrev=$(git rev-parse --abbrev-ref HEAD)
-            final_release_sha=$(git rev-parse HEAD)
-            git tag "$tag_name" $final_release_sha
-          popd
-
-          # copy repos into output
-          cp -r cf-syslog-drain-release-backport create-final-release
+    file: loggregator-ci/tasks/backport/syslog/task.yml
+    params:
+      S3_ACCESS_KEY: {{s3-access-key-id}}
+      S3_SECRET_KEY: {{s3-secret-access-key}}
+      SSH_KEY: {{loggregator-key}}
+      BLOBSTORE_BUCKET: cf-syslog-drain-release-blobs
+      MAJOR_VERSION: "7"
+      BRANCH_NAME: *cf-syslog-backport-branch
   - put: cf-syslog-drain-release-backport
     params:
       repository: create-final-release/cf-syslog-drain-release-backport
@@ -986,76 +829,11 @@ jobs:
   - aggregate:
     - get: noisy-neighbor-nozzle-repo
   - task: create-binaries
-    config:
-      image_resource:
-        type: docker-image
-        source:
-          repository: loggregator/base
-      platform: linux
-      params:
-        VERSION_MAJOR: 1
-        VERSION_MINOR: 5
-        VERSION_PATCH: 1
-      inputs:
-      - name: noisy-neighbor-nozzle-repo
-      outputs:
-      - name: binary-output
-      - name: github-release
-      - name: repo-output
-      run:
-        path: bash
-        args:
-        - -c
-        - |
-          #!/bin/bash
-          set -ex
-
-          # establish version/tag strings
-          version="{\"Major\":$VERSION_MAJOR,\"Minor\":$VERSION_MINOR,\"Build\":$VERSION_PATCH}"
-          semver="v$VERSION_MAJOR.$VERSION_MINOR.$VERSION_PATCH"
-
-          # write out github release files
-          echo "noisy-neighbor-nozzle $semver" > github-release/name
-          echo $semver > github-release/tag
-          echo "TBD" > github-release/body
-          cp -R noisy-neighbor-nozzle-repo/. repo-output
-
-          export WORKSPACE=$PWD
-
-          mkdir -p go
-          pushd go
-            export GOPATH=$PWD
-            mkdir -p src/code.cloudfoundry.org
-            cp -R $WORKSPACE/noisy-neighbor-nozzle-repo/ src/code.cloudfoundry.org/
-          popd
-
-          mkdir $WORKSPACE/noisy-neighbor
-          pushd $GOPATH/src/code.cloudfoundry.org/noisy-neighbor-nozzle-repo/
-            go get ./...
-            for c in $(ls cmd); do
-              pushd cmd/$c
-                binary_file=noisy-neighbor-$c
-                GOOS=linux go build -o $WORKSPACE/noisy-neighbor/$c
-              popd
-            done
-          popd
-
-          mv noisy-neighbor/deployer noisy-neighbor/deployer-linux
-          cp noisy-neighbor-nozzle-repo/cmd/deployer/manifest/manifest_template.yml noisy-neighbor/.
-          rm noisy-neighbor/cli-plugin
-
-          pushd $GOPATH/src/code.cloudfoundry.org/noisy-neighbor-nozzle-repo/cmd/deployer
-            GOOS=darwin go build -o $WORKSPACE/noisy-neighbor/deployer-darwin
-            GOOS=windows go build -o $WORKSPACE/noisy-neighbor/deployer-windows
-          popd
-
-          tar czvf binary-output/noisy-neighbor.tgz noisy-neighbor
-
-          pushd $GOPATH/src/code.cloudfoundry.org/noisy-neighbor-nozzle-repo/cmd/cli-plugin
-            GOOS=linux go build -ldflags "-X main.version=$version" -o $WORKSPACE/binary-output/noisy-neighbor-cli-plugin-linux
-            GOOS=darwin go build -ldflags "-X main.version=$version" -o $WORKSPACE/binary-output/noisy-neighbor-cli-plugin-darwin
-            GOOS=windows go build -ldflags "-X main.version=$version" -o $WORKSPACE/binary-output/noisy-neighbor-cli-plugin-windows
-          popd
+    file: loggregator-ci/tasks/noisy-neighbor-create-binaries/task.yml
+    params:
+      VERSION_MAJOR: 1
+      VERSION_MINOR: 5
+      VERSION_PATCH: 1
   - put: noisy-neighbor-nozzle-repo
     params:
       repository: repo-output
